// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function context matchers toBeCalledWithContext asserts mock has been called at least once with given context: multiple call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).toBeCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: [32m{}[39m
Received
       1: [31mnull[39m
       2: [31mnull[39m

Number of calls: [31m2[39m"
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has been called at least once with given context: no calls 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).toBeCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: [32m{}[39m

Number of calls: [31m0[39m"
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has been called at least once with given context: single call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).toBeCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: [32m{}[39m
Received: [31mnull[39m
Number of calls: [31m1[39m"
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has not been called with given context: multiple call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).[22mnot[2m.toBeCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: not [32m{}[39m
Received
       1:     [2m{}[22m
       3:     [2m{}[22m

Number of calls: [31m3[39m"
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has not been called with given context: partial call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).[22mnot[2m.toBeCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: not [32m{}[39m
Received
       1:     [2m{}[22m

Number of calls: [31m2[39m"
`;

exports[`Function context matchers toBeCalledWithContext asserts mock has not been called with given context: single call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).[22mnot[2m.toBeCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: not [32m{}[39m
Received:     [2m{}[22m

Number of calls: [31m1[39m"
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has been called at least once with given context: multiple call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).toHaveBeenCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: [32m{}[39m
Received
       1: [31mnull[39m
       2: [31mnull[39m

Number of calls: [31m2[39m"
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has been called at least once with given context: no calls 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).toHaveBeenCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: [32m{}[39m

Number of calls: [31m0[39m"
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has been called at least once with given context: single call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).toHaveBeenCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: [32m{}[39m
Received: [31mnull[39m
Number of calls: [31m1[39m"
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has not been called with given context: multiple call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).[22mnot[2m.toHaveBeenCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: not [32m{}[39m
Received
       1:     [2m{}[22m
       3:     [2m{}[22m

Number of calls: [31m3[39m"
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has not been called with given context: partial call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).[22mnot[2m.toHaveBeenCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: not [32m{}[39m
Received
       1:     [2m{}[22m

Number of calls: [31m2[39m"
`;

exports[`Function context matchers toHaveBeenCalledWithContext asserts mock has not been called with given context: single call 1`] = `
"[2mexpect([22m[31mjest.fn()[39m[2m).[22mnot[2m.toHaveBeenCalledWithContext([22m[32mexpected[39m[2m)[22m

Expected: not [32m{}[39m
Received:     [2m{}[22m

Number of calls: [31m1[39m"
`;
